crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_capability_support_all_missing.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 725
expression: "CapabilitySupport::Unsupported\n{\n    missing_vision: true, missing_tools: true, missing_streaming: true,\n    missing_thinking: true,\n}"
---
Unsupported {
    missing_vision: true,
    missing_tools: true,
    missing_streaming: true,
    missing_thinking: true,
}
