crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_capability_support_description_missing_multiple.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 760
expression: support.missing_description()
---
"vision, tools, thinking"
