crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_capability_support_description_missing_vision.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 748
expression: support.missing_description()
---
vision
