crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_capability_support_missing_tools_and_thinking.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 714
expression: "CapabilitySupport::Unsupported\n{\n    missing_vision: false, missing_tools: true, missing_streaming: false,\n    missing_thinking: true,\n}"
---
Unsupported {
    missing_vision: false,
    missing_tools: true,
    missing_streaming: false,
    missing_thinking: true,
}
