crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_capability_support_missing_vision.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 703
expression: "CapabilitySupport::Unsupported\n{\n    missing_vision: true, missing_tools: false, missing_streaming: false,\n    missing_thinking: false,\n}"
---
Unsupported {
    missing_vision: true,
    missing_tools: false,
    missing_streaming: false,
    missing_thinking: false,
}
