crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_capability_support_supported.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 697
expression: "CapabilitySupport::Supported"
---
Supported
