crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_classified_request_all_capabilities.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 125
expression: request
---
required_capabilities:
  vision: true
  tools: true
  streaming: true
  thinking: true
estimated_tokens: 15000
format: Anthropic
quality_preference: Quality
