crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_classified_request_full_capabilities.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 85
expression: request
---
required_capabilities:
  vision: true
  tools: true
  streaming: true
  thinking: false
estimated_tokens: 2500
format: Anthropic
quality_preference: Quality
