crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_classified_request_gemini.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 140
expression: request
---
required_capabilities:
  vision: false
  tools: false
  streaming: false
  thinking: false
estimated_tokens: 800
format: Gemini
quality_preference: Balanced
