crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_classified_request_minimal.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 65
expression: request
---
required_capabilities:
  vision: false
  tools: false
  streaming: false
  thinking: false
estimated_tokens: 0
format: OpenAI
quality_preference: Balanced
