crates/smart-routing/tests/snapshots/snapshot_tests__snapshot_tests__snapshot_classified_request_speed_preference.snap
---
source: crates/smart-routing/tests/snapshot_tests.rs
assertion_line: 105
expression: request
---
required_capabilities:
  vision: false
  tools: false
  streaming: true
  thinking: false
estimated_tokens: 500
format: OpenAI
quality_preference: Speed
